fixing merge